CHANGES
*******

0.12 (unreleased)
=================

- **Removed**: Removed support for Python 2.
  
  You have to upgrade to Python 3 if you want to use this version.

- Dropped support for Python 3.3.

- Added support for Python 3.5, 3.6, 3.7, 3.8 and Pypy 3.6.

- Make Python 3.7 the default testing environment.


0.11 (2016-12-23)
=================

- **Breaking change**

  The ``key_predicate`` function is gone.  You can now use
  ``Predicate(..., index=KeyIndex)`` or ``match_key`` instead.

- **Breaking change**

  The ``class_predicate`` function is gone.  You can now use
  ``Predicate(..., index=ClassIndex)``, ``match_instance`` or
  ``match_class`` instead.

- **Breaking change**

  The undocumented ``Sentinel`` class and ``NOT_FOUND`` object are
  gone.

- **Breaking change**

  The class ``PredicateRegistry`` is not longer part of the API.
  Internally, the classes ``MultiPredicate``, ``MultiIndex``,
  ``SingleValueRegistry`` have all been merged into
  ``PredicateRegistry``, which should now considered an implementation
  detail.

- The second argument for ``match_key`` is now optional; if you
  don't supply it ``match_key`` will generate a predicate function
  that extracts that name by default.

- The documentation now includes a section describing the internals of
  Reg.

- Upload universal wheels to pypi during release.


0.10 (2016-10-04)
=================

- **Breaking change**

  Reg has undergone another API breaking change. The goals of this
  change were:

  * Make everything explicit.

  * A simpler implementation structure -- dispatch functions maintain
    their own registries, which allows for less interacting objects.

  * Make the advanced context-dependent dispatch more Pythonic by
    using classes with special dispatch methods.

  Detailed changes:

  * ``reg.Registry`` is gone. Instead you register directly on the
    dispatch function::

      @reg.dispatch('a')
      def foo(a):
        ...

      def foo_implementation(a):